# llama.cpp

./: CMakeLists.txt  Makefile  ggml-internal.h  ggml-opencl.cpp  ggml-opencl.h  ggml.c  ggml.h  ggml_cuda.cu  k_quants.c  llama-util.h  llama.cpp  llama.h  llama_util.h  rwkv.cpp  rwkv.h
examples/: CMakeLists.txt
examples/main/: main.cpp
examples/quantize/: CMakeLists.txt  quantize.cpp
examples/quantize-stats/: quantize-stats.cpp
examples/simple/: simple.cpp
examples/web/: CMakeLists.txt  README.md  completion.cpp  embeddings.cpp  engine.cpp  engine.h  thread.h  worker.cpp
examples/web/fastchat/: constants.py  conversation.py
examples/web/fastchat/serve/: gradio_web_server.py
tests/: test-quantize-perf.cpp
